Simplify Experience section for recruiter-friendly view
- Removed excessive details and long bullet points
- Kept only essential information: role, company, duration, and key technologies
- Made description concise and focused on relevant skills
- Streamlined technology stack to show most important technologies
- Optimized for quick scanning by recruiters

--- a/index.html
+++ b/index.html
@@ -317,26 +317,12 @@ geocoding, interactive mapping, and user management for compliance tracking.</p>
                     </div>
                     <div class="experience-description">
                         <p>
-                            Contributing to meaningful social impact through technology at Saayam For All, 
-                            a 501(c)(3) non-profit organization. Leading full-stack development initiatives 
-                            for large-scale cloud native applications.
+                            Developing full-stack applications for a 501(c)(3) non-profit organization, 
+                            working with React, React Native, Java, Python, Go, and AWS cloud services 
+                            to build scalable microservices and data analytics solutions.
                         </p>
                     </div>
-                    <div class="responsibilities">
-                        <h4><i class="fas fa-tasks"></i> Key Responsibilities</h4>
-                        <ul>
-                            <li>Developing React and React Native components for the Saayam web app and mobile app</li>
-                            <li>Understanding and implementing web app and mobile app requirements using Java, Python, Go, and React JS</li>
-                            <li>Developing microservices for Volunteer, Volunteer Org, Request, Generative AI, and Data Analytics using Spring Boot 3, JDK 17, Python</li>
-                            <li>Deploying applications in Kafka and AWS EKS (Kubernetes) environments</li>
-                            <li>Writing comprehensive unit tests and automated test cases for developed features</li>
-                            <li>Providing detailed documentation for all developed features</li>
-                            <li>Working with various AWS services including Cognito, API Gateway, Lambda Functions, MSK, EKS, Cloudwatch, and RDS</li>
-                            <li>Managing PostgreSQL and Aurora databases to support development needs</li>
-                        </ul>
-                    </div>
                     <div class="tech-stack">
-                        <h4><i class="fas fa-code"></i> Technology Stack</h4>
                         <div class="tech-tags">
                             <span class="tech-tag">React</span>
                             <span class="tech-tag">React Native</span>
@@ -344,26 +330,10 @@ geocoding, interactive mapping, and user management for compliance tracking.</p>
                             <span class="tech-tag">Python</span>
                             <span class="tech-tag">Go</span>
                             <span class="tech-tag">Spring Boot 3</span>
-                            <span class="tech-tag">JDK 17</span>
                             <span class="tech-tag">AWS EKS</span>
                             <span class="tech-tag">Kubernetes</span>
-                            <span class="tech-tag">Kafka</span>
                             <span class="tech-tag">PostgreSQL</span>
-                            <span class="tech-tag">Aurora</span>
-                            <span class="tech-tag">AWS Services</span>
                         </div>
-                    </div>
-                    <div class="impact-section">
-                        <h4><i class="fas fa-heart"></i> Social Impact</h4>
-                        <p>
-                            Contributing to Saayam For All's mission of providing valuable hands-on experience 
-                            in large-scale cloud native applications while supporting their non-profit initiatives 
-                            that make a positive difference in communities.
-                        </p>
-                    </div>
-                    <div class="contact-info">
-                        <p><strong>Contact:</strong> <a href="mailto:rao.bhethanabotla@saayamforall.org">rao.bhethanabotla@saayamforall.org</a></p>
-                        <p><strong>Organization:</strong> <a href="https://SaayamForAll.org" target="_blank">SaayamForAll.org</a></p>
                     </div>
                 </div>
             </div>
