Update LinkedIn and GitHub links in social media icons
- Added LinkedIn profile link: https://www.linkedin.com/in/rahul-ega-143599297
- Added GitHub profile link: https://github.com/Rahul9121
- Updated both hero section and contact section social links
- Links now open in new tabs for better user experience

--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
                     <a href="#contact" class="btn btn-secondary">Get In Touch</a>
                 </div>
                 <div class="social-links">
-                    <a href="#" class="social-link"><i class="fab fa-linkedin"></i></a>
-                    <a href="#" class="social-link"><i class="fab fa-github"></i></a>
+                    <a href="https://www.linkedin.com/in/rahul-ega-143599297" target="_blank" class="social-link"><i class="fab fa-linkedin"></i></a>
+                    <a href="https://github.com/Rahul9121" target="_blank" class="social-link"><i class="fab fa-github"></i></a>
                     <a href="#" class="social-link"><i class="fab fa-twitter"></i></a>
                     <a href="#" class="social-link"><i class="fab fa-kaggle"></i></a>
                 </div>
@@ -398,8 +398,8 @@ geocoding, interactive mapping, and user management for compliance tracking.</p>
                     </div>
 
                     <div class="social-links">
-                        <a href="#" class="social-link"><i class="fab fa-linkedin"></i></a>
-                        <a href="#" class="social-link"><i class="fab fa-github"></i></a>
+                        <a href="https://www.linkedin.com/in/rahul-ega-143599297" target="_blank" class="social-link"><i class="fab fa-linkedin"></i></a>
+                        <a href="https://github.com/Rahul9121" target="_blank" class="social-link"><i class="fab fa-github"></i></a>
                         <a href="#" class="social-link"><i class="fab fa-twitter"></i></a>
                         <a href="#" class="social-link"><i class="fab fa-kaggle"></i></a>
                     </div>
