Update portfolio with modified index.html and added CV files

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <a href="#experience" class="nav-link">Experience</a>
                 <a href="#research" class="nav-link">Research</a>
                 <a href="#contact" class="nav-link">Contact</a>
-                <a href="assets/cv.pdf" class="cv-btn" download><i class="fas fa-download"></i> Download CV</a>
+                <a href="assets/rahulEgaCV.pdf" class="cv-btn" download><i class="fas fa-download"></i> Download CV</a>
                 <button class="theme-toggle" id="themeToggle">
                     <i class="fas fa-moon"></i>
                 </button>
@@ -169,8 +169,8 @@
                     <div class="project-image">
                         <img src="assets/project1.jpg" alt="Tax Tracker System ">
                         <div class="project-overlay">
-                            <a href="#" class="project-link"><i class="fas fa-external-link-alt"></i></a>
-                            <a href="#" class="project-link"><i class="fab fa-github"></i></a>
+                            <a href="https://tax-tracker-system.onrender.com/" class="project-link"><i class="fas fa-external-link-alt"></i></a>
+                            <a href="https://github.com/Rahul9121/tax-tracker-system" class="project-link"><i class="fab fa-github"></i></a>
                         </div>
                     </div>
                     <div class="project-content">
@@ -189,8 +189,8 @@ based access and real-time tracking. </p>
                     <div class="project-image">
                         <img src="assets/project2.jpg" alt="STUDENT MANAGEMENT SYSTEM ">
                         <div class="project-overlay">
-                            <a href="#" class="project-link"><i class="fas fa-external-link-alt"></i></a>
-                            <a href="#" class="project-link"><i class="fab fa-github"></i></a>
+                            <a href="https://student-management-system-rahul-1.onrender.com/" class="project-link"><i class="fas fa-external-link-alt"></i></a>
+                            <a href="https://github.com/Rahul9121/Student-Management-System-Rahul" class="project-link"><i class="fab fa-github"></i></a>
                         </div>
                     </div>
                     <div class="project-content">
@@ -233,8 +233,8 @@ based access and real-time tracking. </p>
                     <div class="project-image">
                         <img src="assets/project4.png" alt="Airbnb Listings – Exploratory Data Analysis (EDA">
                         <div class="project-overlay">
-                            <a href="#" class="project-link"><i class="fas fa-external-link-alt"></i></a>
-                            <a href="#" class="project-link"><i class="fab fa-github"></i></a>
+                            <a href="https://airbnb-rahul-app-ep3hwhtjgmony9o99rgkqs.streamlit.app/" class="project-link"><i class="fas fa-external-link-alt"></i></a>
+                            <a href="https://github.com/Rahul9121/airbnb-rahul-streamlit" class="project-link"><i class="fab fa-github"></i></a>
                         </div>
                     </div>
                     <div class="project-content">
@@ -253,8 +253,8 @@ based access and real-time tracking. </p>
                     <div class="project-image">
                         <img src="assets/project5.png" alt="Indian Premier League (IPL) Data Analysis (2008–2017)">
                         <div class="project-overlay">
-                            <a href="#" class="project-link"><i class="fas fa-external-link-alt"></i></a>
-                            <a href="#" class="project-link"><i class="fab fa-github"></i></a>
+                            <a href="https://ipldataviz-rahul-32skz7xsewg6e4tmeouwum.streamlit.app/" class="project-link"><i class="fas fa-external-link-alt"></i></a>
+                            <a href="https://github.com/Rahul9121/iplDataViz-rahul" class="project-link"><i class="fab fa-github"></i></a>
                         </div>
                     </div>
                     <div class="project-content">
@@ -275,8 +275,8 @@ outcomes using data visualization techniques.</p>
                     <div class="project-image">
                         <img src="assets/project6.png" alt="Biodiversity Risk Assessment Tool">
                         <div class="project-overlay">
-                            <a href="#" class="project-link"><i class="fas fa-external-link-alt"></i></a>
-                            <a href="#" class="project-link"><i class="fab fa-github"></i></a>
+                            <a href="https://bioscope-project.vercel.app/" class="project-link"><i class="fas fa-external-link-alt"></i></a>
+                            <a href="https://github.com/Rahul9121/bioscope-project" class="project-link"><i class="fab fa-github"></i></a>
                         </div>
                     </div>
                     <div class="project-content">
@@ -350,23 +350,16 @@ geocoding, interactive mapping, and user management for compliance tracking.</p>
                         <i class="fas fa-file-alt"></i>
                     </div>
                     <div class="paper-content">
-                        <h3>Predictive Analytics in Customer Behavior: A Machine Learning Approach</h3>
-                        <p class="paper-authors">Rahul et al.</p>
-                        <p class="paper-journal">International Journal of Data Science • 2024</p>
+                        <h3>AI-Enhanced Biodiversity Risk Assessment for Hospitality Sector Compliance in New Jersey</h3>
+                        <p class="paper-authors">Rahul Ega.</p>
+                        <p class="paper-journal"></p>
                         <p class="paper-abstract">
-                            This research explores the application of machine learning algorithms in predicting customer behavior patterns. 
-                            The study presents a novel approach combining ensemble methods with feature engineering techniques to achieve 
-                            superior prediction accuracy in customer analytics.
+                           BiodivProScope is a location-based risk assessment tool designed to help hotels in New Jersey comply with biodiversity regulations. It analyzes ecological threats—like endangered species, invasive organisms, and pollution—within a 5-mile radius using geospatial data and AI-enhanced logic. The platform offers interactive maps, tailored mitigation strategies, and downloadable reports, making environmental compliance both accessible and actionable for hotel managers.
                         </p>
                         <div class="paper-actions">
-                            <a href="#" class="btn btn-primary">Read Paper</a>
-                            <a href="#" class="btn btn-secondary">Download PDF</a>
-                        </div>
-                        <div class="paper-metrics">
-                            <span class="metric"><i class="fas fa-eye"></i> 1,250 views</span>
-                            <span class="metric"><i class="fas fa-download"></i> 85 downloads</span>
-                            <span class="metric"><i class="fas fa-quote-left"></i> 12 citations</span>
-                        </div>
+                            <a href="https://bioscope-project.vercel.app/" class="btn btn-primary">Visit project</a>
+                            <a href="assets/rp.pdf" class="btn btn-secondary">Download PDF</a>
+                        </div>                        
                     </div>
                 </div>
             </div>
